<resources>
    <string name="app_name">无限白板</string>

    <string name="doodle_clear_screen">清屏</string>
    <string name="doodle_cant_undo_after_clearing">清屏后不可撤销</string>
    <string name="doodle_saving_picture">保存图片</string>
    <string name="doodle_enter">确定</string>
    <string name="doodle_cancel">取消</string>
    <string name="doodle_save">保存</string>

    <string name="doodle_edit">编辑</string>
    <string name="doodle_remove">移除</string>
    <string name="doodle_top">置顶</string>
    <string name="doodle_bottom">置底</string>

    <string name="doodle_select_image">选择图片</string>

    <string name="doodle_edit_mode">编辑模式</string>
    <string name="menu_button">菜单</string>
    <string name="pay_button">捐赠</string>
    <string name="about">关于：酷安@一块小板子 QQ：2232442466\n无限白板是一款类似草稿的工具软件，快速绘制此刻的想法，而不是普通的作画软件；在没有纸笔时可以大大提升你的工作或学习效率！</string>
    <string name="delete_button">清空</string>
    <string name="setting_button">设置</string>
    <string name="title_activity_settings">设置</string>
    <string name="draw_header">绘图</string>
    <string name="auto_save_title">自动保存</string>
    <string name="other_header">其他</string>
    <string name="title_activity_about">关于</string>
    <string name="action_settings">设置</string>
    <string name="lock_button">锁定</string>
</resources>
