<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="96dp"
    android:translationZ="24dp"
    android:overScrollMode="always"
    app:cardPreventCornerOverlap="true"
    app:behavior_peekHeight="96dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="498dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/color_indicator"
            app:layout_constraintEnd_toStartOf="@+id/lock_button"
            app:layout_constraintStart_toEndOf="@+id/color_indicator"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <View
            android:id="@+id/color_indicator"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/setting_button"
            android:text="@string/delete_button"
            app:icon="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/lock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/lock_button"
            android:backgroundTint="@color/colorSecondary"
            android:src="@drawable/ic_lock_open"
            app:layout_constraintEnd_toStartOf="@+id/delete_button"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/donate_button"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/setting_button"
            android:text="@string/pay_button"
            app:icon="@drawable/ic_donate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_value_txt" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/setting_button"
            android:text="@string/setting_button"
            app:icon="@drawable/ic_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_value_txt" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:contentDescription="bar"
                android:src="@drawable/drop_bar"
                tools:ignore="HardcodedText" />
        </FrameLayout>

        <oboard.ep.ColorPicker
            android:id="@+id/color_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_button" />

        <TextView
            android:id="@+id/color_value_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>